section qualidades criada

--- a/index.html
+++ b/index.html
@@ -70,26 +70,35 @@
           <p class="text-p-s">R$ 6699</p>
         </div>
       </div>
+    </div>
+  </section>
 
-      <!-- <div class="modelo">
-        <div class="modelo-img">
-          <img src="./src/assets/img/bicicletas/nimbus-home.jpg" alt="Nimbus" width="460">
+
+  <section class="qualidades">
+    <div class="containter-qualidades">
+      <div class="qualidades-texto">
+        <p class="text-p-med">TECNOLOGIA AVANÇADA</p>
+        <h1 class="text-h1">você escolhe as suas cores e componentes<span>.</span></h1>
+        <p class="text-p-med">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
+        <p class="text-p-med modelo-titulo">Escolha um modelo</p>
+        <div class="qualidades-texto-tipo">
+          <div class="tipo-modelo">
+            <h4 class="text-p-med eletrico">Motor Elétrico</h4>
+            <p class="text-p-s">Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
+          </div>
+          <div class="tipo-modelo">
+            <h4 class="text-p-med rastreador">Rastreador</h4>
+            <p class="text-p-s">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
+          </div>
         </div>
-        <h2 class="text-h2 modelo-nome"><span><img src="/src/assets/dec/detalhe-titulo.svg"></span> Nimbus Stark</h2>
-        <p class="text-p-s">R$ 4699</p>
       </div>
 
-      <div class="modelo">
-        <div class="modelo-img">
-          <img src="./src/assets/img/bicicletas/nebula-home.jpg" alt="Nebula" width="460">
-        </div>
-        <h2 class="text-h2 modelo-nome"><span><img src="/src/assets/dec/detalhe-titulo.svg"></span>Nebula Cosmic</h2>
-        <p class="text-p-s">R$ 6699</p>
-      </div> -->
-
+      <div class="containter-qualidades-arte">
+        <img src="./src/assets/img/fotos/tecnologia.jpg" alt="Tecnologia">
+      </div>
     </div>
-
   </section>
+
 </body>
 
 </html>
