section parceiros, correcoes de responsividade

--- a/index.html
+++ b/index.html
@@ -99,6 +99,39 @@
     </div>
   </section>
 
+  <section class="parceiros">
+    <h1 class="text-h1">nossos parceiros<span>.</span></h1>
+
+    <div class="parceiros-quadro">
+      <div class="quadro-item">
+        <img src="./src/assets/img/parceiros/caravan.svg" alt="Caravan" width="136">
+      </div>
+      <div class="quadro-item">
+        <img src="./src/assets/img/parceiros/ranek.svg" alt="Ranek" width="136">
+      </div>
+      <div class="quadro-item">
+        <img src="./src/assets/img/parceiros/handel.svg" alt="Handel" width="136">
+      </div>
+      <div class="quadro-item no-border-right">
+        <img src="./src/assets/img/parceiros/dogs.svg" alt="Dogs" width="136">
+      </div>
+      <div class="quadro-item no-border-bottom">
+        <img src="./src/assets/img/parceiros/lescone.svg" alt="Lescone" width="140">
+      </div>
+      <div class="quadro-item no-border-bottom">
+        <img src="./src/assets/img/parceiros/flexblog.svg" alt="Flexblog" width="140">
+      </div>
+      <div class="quadro-item no-border-bottom">
+        <img src="./src/assets/img/parceiros/wildbeast.svg" alt="Wildbeast" width="140">
+      </div>
+      <div class="quadro-item no-border-bottom no-border-right">
+        <img src="./src/assets/img/parceiros/surfbot.svg" alt="Surfbot" width="140">
+      </div>
+    </div>
+
+
+  </section>
+
 </body>
 
 </html>
