section feedback, seguro. Automacoes no codigo

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       <main class="intro">
         <div class="intro-texto">
-          <h1 class="text-h1">Bicicletas feitas sob medida<span>.</span></h1>
+          <h1 class="text-h1">Bicicletas feitas sob medida<span class="text-h1-span">.</span></h1>
           <p class="text-p-med">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
           <a href="#bicicletas" class="btn-primario">Selecione a sua</a>
         </div>
@@ -44,7 +44,7 @@
   </section>
 
   <section class="bicicletas" id="bicicletas">
-    <h1 class="text-h1">escolha a sua<span>.</span></h1>
+    <h1 class="text-h1">escolha a sua<span class="text-h1-span">.</span></h1>
 
     <div class="bicicletas-modelos">
       <div class="modelo">
@@ -78,7 +78,7 @@
     <div class="containter-qualidades">
       <div class="qualidades-texto">
         <p class="text-p-med">TECNOLOGIA AVANÇADA</p>
-        <h1 class="text-h1">você escolhe as suas cores e componentes<span>.</span></h1>
+        <h1 class="text-h1">você escolhe as suas cores e componentes<span class="text-h1-span">.</span></h1>
         <p class="text-p-med">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
         <p class="text-p-med modelo-titulo">Escolha um modelo</p>
         <div class="qualidades-texto-tipo">
@@ -100,7 +100,7 @@
   </section>
 
   <section class="parceiros">
-    <h1 class="text-h1">nossos parceiros<span>.</span></h1>
+    <h1 class="text-h1">nossos parceiros<span class="text-h1-span">.</span></h1>
 
     <div class="parceiros-quadro">
       <div class="quadro-item">
@@ -116,20 +116,64 @@
         <img src="./src/assets/img/parceiros/dogs.svg" alt="Dogs" width="136">
       </div>
       <div class="quadro-item no-border-bottom">
-        <img src="./src/assets/img/parceiros/lescone.svg" alt="Lescone" width="140">
+        <img src="./src/assets/img/parceiros/lescone.svg" alt="Lescone" width="136">
       </div>
       <div class="quadro-item no-border-bottom">
-        <img src="./src/assets/img/parceiros/flexblog.svg" alt="Flexblog" width="140">
+        <img src="./src/assets/img/parceiros/flexblog.svg" alt="Flexblog" width="136">
       </div>
       <div class="quadro-item no-border-bottom">
-        <img src="./src/assets/img/parceiros/wildbeast.svg" alt="Wildbeast" width="140">
+        <img src="./src/assets/img/parceiros/wildbeast.svg" alt="Wildbeast" width="136">
       </div>
       <div class="quadro-item no-border-bottom no-border-right">
-        <img src="./src/assets/img/parceiros/surfbot.svg" alt="Surfbot" width="140">
+        <img src="./src/assets/img/parceiros/surfbot.svg" alt="Surfbot" width="136">
       </div>
     </div>
+  </section>
 
+  <section class="feedback">
+    <img src="./src/assets/img/fotos/depoimento.jpg">
+    <div class="feedback-texto">
+      <p class="depoimento">Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo.</p>
+      <p class="text-p-s">Ana Júlia</p>
+    </div>
+  </section>
 
+  <section class="seguro" id="seguro">
+    <div class="container-seguro">
+      <h1 class="text-h1">seguros<span class="text-h1-span">.</span></h1>
+      <div class="container-card">
+        <div class="seguro-card">
+          <div class="seguro-card-titulo">
+            <h2 class="text-h2">PRATA</h2>
+            <h2 class="text-h2 preco">R$ 199</h2>
+          </div>
+          <ul>
+            <li class="text-p-s">Duas trocas por ano</li>
+            <li class="text-p-s">Assisteência técnica</li>
+            <li class="text-p-s">Suporte 08h às 18h</li>
+            <li class="text-p-s">Cobertura estadual</li>
+          </ul>
+          <a href="" class="btn-secundario">Inscreva-se</a>
+        </div>
+
+        <div class="seguro-card">
+          <div class="seguro-card-titulo">
+            <h2 class="text-h2 ouro">OURO</h2>
+            <h2 class="text-h2 preco">R$ 299</h2>
+          </div>
+          <ul>
+            <li class="text-p-s">Cinco trocas por ano</li>
+            <li class="text-p-s">Assisteência especial</li>
+            <li class="text-p-s">Suporte 24h</li>
+            <li class="text-p-s">Cobertura nacional</li>
+            <li class="text-p-s">Desconto em parceiros</li>
+            <li class="text-p-s">Acesso ao Clube Bikcraft</li>
+          </ul>
+          <a href="" class="btn-primario">Inscreva-se</a>
+        </div>
+      </div>
+
+    </div>
   </section>
 
 </body>
