--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
@@ -17,17 +17,11 @@
         <a href="./">
           <img src="./src/assets/img/bikcraft.svg" alt="Bikcraft" width="135">
         </a>
-        <nav>
-          <ul>
-            <a href="#bicicletas">
-              <li class="text-nav">Bicicletas</li>
-            </a>
-            <a href="#seguro">
-              <li class="text-nav">Seguros</li>
-            </a>
-            <a href="#contato">
-              <li class="text-nav">Contato</li>
-            </a>
+        <nav aria-label="primaria">
+          <ul class="header-menu">
+            <li class="text-nav"><a href="./bicicletas.html">Bicicletas</a></li>
+            <li class="text-nav"><a href="./seguros.html">Seguros</a></li>
+            <li class="text-nav"><a href="./contato.html">Contato</a></li>
           </ul>
         </nav>
       </header>
@@ -172,10 +166,49 @@
           <a href="" class="btn-primario">Inscreva-se</a>
         </div>
       </div>
-
     </div>
   </section>
 
+  <footer class="footer">
+    <div class="footer-container">
+      <img src="./src/assets/img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
+      <div class="footer-contato">
+        <h3 class="text-p-med">Contato</h3>
+        <ul class="text-p-s">
+          <li><a href="tel:+552199999999">+55 21 9999-9999</a></li>
+          <li class="separador"><a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a></li>
+          <li><br>Rua Ali Perto, 42 - Botafogo</li>
+          <li class="separador">Rio de Janeiro - RJ</li>
+        </ul>
+
+        <div class="footer-redes">
+          <a href="./">
+            <img src="./src/assets/icons/redes-sociais/instagram.svg" width="32" height="32" alt="Instagram">
+          </a>
+          <a href="./">
+            <img src="./src/assets/icons/redes-sociais/facebook.svg" width="32" height="32" alt="Facebook">
+          </a>
+          <a href="./">
+            <img src="./src/assets/icons/redes-sociais/youtube.svg" width="32" height="32" alt="Youtube">
+          </a>
+        </div>
+      </div>
+
+      <div class="footer-informacoes">
+        <h3 class="text-p-med">Informações</h3>
+        <nav>
+          <ul class="text-p-s">
+            <li><a href="./bicicletas.html">Bicicletas</a></li>
+            <li><a href="./seguros.html">Seguros</a></li>
+            <li><a href="./contato.html">Contato</a></li>
+            <li><a href="./termos.html">Termos e Condições</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <p class="text-p-s copy">Bikcraft © Alguns direitos reservados.</p>
+    </div>
+  </footer>
 </body>
 
 </html>
