pagina bicicleta finalizada

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </div>
   </section>
 
-  <section class="seguro" id="seguro">
+  <section class="seguro">
     <div class="container-seguro">
       <h1 class="text-h1">seguros<span class="text-h1-span">.</span></h1>
       <div class="container-card">
