--- a/bicicletas.html
+++ b/bicicletas.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Bikcraft - O seu lugar para comprar a bicleta perfeita.">
+  <meta name="description" content="Bicicletas Bikcraft, escolha a sua.">
   <link rel="stylesheet" href="./src/styles/bicicletas.css">
   <title>Bicletas | Bikcraft</title>
 </head>
