--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="intro-texto">
           <h1 class="text-h1">Bicicletas feitas sob medida<span class="text-h1-span">.</span></h1>
           <p class="text-p-med">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
-          <a href="#bicicletas" class="btn-primario">Selecione a sua</a>
+          <a href="./bicicletas.html" class="btn-primario">Selecione a sua</a>
         </div>
         <img src="./src/assets/img/bicicletas/nimbus-home.jpg" alt="Nimbus" width="640">
       </main>
