responsividade do sessao bicicleta principal, inicio bicicleta alternativa

--- a/bicicletas/nimbus.html
+++ b/bicicletas/nimbus.html
@@ -101,6 +101,28 @@
       </div>
     </div>
   </section>
+
+  <section class="bicicleta-alternativa">
+    <h1 class="text-h1">escolha a sua<span class="text-h1-span">.</span></h1>
+
+    <div class="bicicleta-alternativa-container">
+      <div class="modelo">
+        <img src="../src/assets/img/bicicletas/magic.jpg" alt="Magic">
+        <div class="modelo-texto">
+          <h2 class="text-h2">Magic Might</h2>
+          <p class="text-p-s">R$ 2699</p>
+        </div>
+      </div>
+      <div class="modelo">
+        <img src="../src/assets/img/bicicletas/nebula.jpg" alt="Nebula">
+        <div class="modelo-texto">
+          <h2 class="text-h2">Nebula Cosmic</h2>
+          <p class="text-p-s">R$ 6699</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
 </body>
 
 </html>
