pagina bicicleta alternativa finalizada

--- a/bicicletas/nimbus.html
+++ b/bicicletas/nimbus.html
@@ -97,7 +97,7 @@
               </div>
             </div>
           </div>
-        </div>    
+        </div>
       </div>
     </div>
   </section>
@@ -123,6 +123,57 @@
     </div>
   </section>
 
+  <section class="propaganda">
+    <div class="propaganda-container">
+      <img src="../src/assets/img/fotos/seguros.jpg" alt="Seguro" width="680">
+      <div class="propaganda-container-texto">
+        <h1 class="text-h1">Pedale mais tranquilo com o nosso <span class="text-h1-span">seguro.</span></h1>
+        <p class="text-p-med">Inscreva-se em um dos planos do nosso seguro Bikcraft e aproveite diversos benefícios.</p>
+        <a href="" class="btn-primario">CONHEÇA MAIS</a>
+      </div>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="footer-container">
+      <img src="../src/assets/img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
+      <div class="footer-contato">
+        <h3 class="text-p-med">Contato</h3>
+        <ul class="text-p-s">
+          <li><a href="tel:+552199999999">+55 21 9999-9999</a></li>
+          <li class="separador"><a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a></li>
+          <li><br>Rua Ali Perto, 42 - Botafogo</li>
+          <li class="separador">Rio de Janeiro - RJ</li>
+        </ul>
+
+        <div class="footer-redes">
+          <a href="./">
+            <img src="../src/assets/icons/redes-sociais/instagram.svg" width="32" height="32" alt="Instagram">
+          </a>
+          <a href="./">
+            <img src="../src/assets/icons/redes-sociais/facebook.svg" width="32" height="32" alt="Facebook">
+          </a>
+          <a href="./">
+            <img src="../src/assets/icons/redes-sociais/youtube.svg" width="32" height="32" alt="Youtube">
+          </a>
+        </div>
+      </div>
+
+      <div class="footer-informacoes">
+        <h3 class="text-p-med">Informações</h3>
+        <nav>
+          <ul class="text-p-s">
+            <li><a href="./bicicletas.html">Bicicletas</a></li>
+            <li><a href="./seguros.html">Seguros</a></li>
+            <li><a href="./contato.html">Contato</a></li>
+            <li><a href="./termos.html">Termos e Condições</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <p class="text-p-s copy">Bikcraft © Alguns direitos reservados.</p>
+    </div>
+  </footer>
 </body>
 
 </html>
