--- a/bicicletas/nimbus.html
+++ b/bicicletas/nimbus.html
@@ -13,14 +13,14 @@
 <body>
   <div class="header-intro-bg">
     <header class="header">
-      <a href="./">
+      <a href="../index.html">
         <img src="../src/assets/img/bikcraft.svg" alt="Bikcraft" width="135">
       </a>
       <nav aria-label="primaria">
         <ul class="header-menu">
-          <li class="text-nav"><a href="./bicicletas.html">Bicicletas</a></li>
-          <li class="text-nav"><a href="./seguros.html">Seguros</a></li>
-          <li class="text-nav"><a href="./contato.html">Contato</a></li>
+          <li class="text-nav"><a href="../bicicletas.html">Bicicletas</a></li>
+          <li class="text-nav"><a href="../seguros.html">Seguros</a></li>
+          <li class="text-nav"><a href="../contato.html">Contato</a></li>
         </ul>
       </nav>
     </header>
@@ -44,7 +44,7 @@
         <div class="conteudo-texto">
           <p class="text-p-med">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
           <div class="conteudo-texto-botoes">
-            <a href="" class="btn-primario">COMPRAR AGORA</a>
+            <a href="../orcamento.html" class="btn-primario">COMPRAR AGORA</a>
             <div class="botoes-detalhe">
               <span class="text-p-s3"><img src="../src/assets/icons/entrega.svg">entrega em 5 dias</span>
               <span class="text-p-s3"><img src="../src/assets/icons/estoque.svg">18 em estoque</span>
@@ -107,14 +107,14 @@
 
     <div class="bicicleta-alternativa-container">
       <div class="modelo">
-        <img src="../src/assets/img/bicicletas/magic.jpg" alt="Magic">
+        <a href="./magic.html"><img src="../src/assets/img/bicicletas/magic.jpg" alt="Magic"></a>
         <div class="modelo-texto">
           <h2 class="text-h2">Magic Might</h2>
           <p class="text-p-s">R$ 2699</p>
         </div>
       </div>
       <div class="modelo">
-        <img src="../src/assets/img/bicicletas/nebula.jpg" alt="Nebula">
+        <a href="./nebula.html"><img src="../src/assets/img/bicicletas/nebula.jpg" alt="Nebula"></a>
         <div class="modelo-texto">
           <h2 class="text-h2">Nebula Cosmic</h2>
           <p class="text-p-s">R$ 6699</p>
@@ -129,7 +129,7 @@
       <div class="propaganda-container-texto">
         <h1 class="text-h1">Pedale mais tranquilo com o nosso <span class="text-h1-span">seguro.</span></h1>
         <p class="text-p-med">Inscreva-se em um dos planos do nosso seguro Bikcraft e aproveite diversos benefícios.</p>
-        <a href="" class="btn-primario">CONHEÇA MAIS</a>
+        <a href="../seguros.html" class="btn-primario">CONHEÇA MAIS</a>
       </div>
     </div>
   </section>
@@ -163,10 +163,10 @@
         <h3 class="text-p-med">Informações</h3>
         <nav>
           <ul class="text-p-s">
-            <li><a href="./bicicletas.html">Bicicletas</a></li>
-            <li><a href="./seguros.html">Seguros</a></li>
-            <li><a href="./contato.html">Contato</a></li>
-            <li><a href="./termos.html">Termos e Condições</a></li>
+            <li><a href="../bicicletas.html">Bicicletas</a></li>
+            <li><a href="../seguros.html">Seguros</a></li>
+            <li><a href="../contato.html">Contato</a></li>
+            <li><a href="../termos.html">Termos e Condições</a></li>
           </ul>
         </nav>
       </div>
