--- a/bicicletas.html
+++ b/bicicletas.html
@@ -13,7 +13,7 @@
 <body>
   <div class="header-intro-bg">
     <header class="header">
-      <a href="./">
+      <a href="./index.html">
         <img src="./src/assets/img/bikcraft.svg" alt="Bikcraft" width="135">
       </a>
       <nav aria-label="primaria">
@@ -59,7 +59,7 @@
           Rasterador
         </li>
       </ul>
-      <a href="./nimbus.html" class="btn-primario">MAIS SOBRE ➔</a>
+      <a href="./bicicletas/nimbus.html" class="btn-primario">MAIS SOBRE ➔</a>
     </div>
   </div>
 
@@ -90,7 +90,7 @@
             Rasterador
           </li>
         </ul>
-        <a href="./magic.html" class="btn-primario">MAIS SOBRE ➔</a>
+        <a href="./bicicletas/magic.html" class="btn-primario">MAIS SOBRE ➔</a>
       </div>
     </div>
   </div>
@@ -122,7 +122,7 @@
           Rasterador
         </li>
       </ul>
-      <a href="./nebula.html" class="btn-primario">MAIS SOBRE ➔</a>
+      <a href="./bicicletas/nebula.html" class="btn-primario">MAIS SOBRE ➔</a>
     </div>
   </div>
 
