--- a/orcamento.html
+++ b/orcamento.html
@@ -176,7 +176,7 @@
           </form>
           <br><br>
           <div class="termos text-p-s">
-            <input type="checkbox" id="termo" name="exampletermo">
+            <input type="checkbox" id="termo" name="termo">
             <label for="termo">Li e aceito os <span>termos e condições.</span></label>
           </div>
           <button class="btn-primario">Solicitar orçamento</button>
