correcoes de links externos

--- a/contato.html
+++ b/contato.html
@@ -5,23 +5,22 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Faça já seu orçamento com a melhor empresa de bike disponível!">
   <link rel="stylesheet" href="./src/styles/orcamento.css">
   <link rel="stylesheet" href="./src/styles/contato.css">
-  <title>Orçamento | Bikcraft</title>
+  <title>Contato | Bikcraft</title>
 </head>
 
 <body>
   <div class="header-intro-bg">
     <header class="header">
-      <a href="../index.html">
-        <img src="../src/assets/img/bikcraft.svg" alt="Bikcraft" width="135">
+      <a href="./index.html">
+        <img src="./src/assets/img/bikcraft.svg" alt="Bikcraft" width="135">
       </a>
       <nav aria-label="primaria">
         <ul class="header-menu">
-          <li class="text-nav"><a href="../bicicletas.html">Bicicletas</a></li>
-          <li class="text-nav"><a href="../seguros.html">Seguros</a></li>
-          <li class="text-nav"><a href="../contato.html">Contato</a></li>
+          <li class="text-nav"><a href="./bicicletas.html">Bicicletas</a></li>
+          <li class="text-nav"><a href="./seguros.html">Seguros</a></li>
+          <li class="text-nav"><a href="./contato.html">Contato</a></li>
         </ul>
       </nav>
     </header>
@@ -57,13 +56,13 @@
           </div>
           <div class="footer-redes padding-redes-p">
             <a href="./">
-              <img src="../src/assets/icons/redes-sociais/instagram-p.svg" width="32" height="32" alt="Instagram">
+              <img src="./src/assets/icons/redes-sociais/instagram-p.svg" width="32" height="32" alt="Instagram">
             </a>
             <a href="./">
-              <img src="../src/assets/icons/redes-sociais/facebook-p.svg" width="32" height="32" alt="Facebook">
+              <img src="./src/assets/icons/redes-sociais/facebook-p.svg" width="32" height="32" alt="Facebook">
             </a>
             <a href="./">
-              <img src="../src/assets/icons/redes-sociais/youtube-p.svg" width="32" height="32" alt="Youtube">
+              <img src="./src/assets/icons/redes-sociais/youtube-p.svg" width="32" height="32" alt="Youtube">
             </a>
           </div>
         </div>
@@ -122,7 +121,7 @@
                 <p>Rua Ali Perto, 25<br>São Paulo - SP</p>
               </span>
               <span>
-                <p>rio@bikcraft.com<br>11 9999-9999</p>
+                <p>sp@bikcraft.com<br>11 9999-9999</p>
               </span>
             </div>
             <p class="text-p-s horario">08-18h de seg à dom</p>
@@ -135,7 +134,7 @@
 
   <footer class="footer">
     <div class="footer-container">
-      <img src="../src/assets/img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
+      <img src="./src/assets/img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       <div class="footer-contato">
         <h3 class="text-p-med">Contato</h3>
         <ul class="text-p-s">
@@ -147,13 +146,13 @@
 
         <div class="footer-redes">
           <a href="./">
-            <img src="../src/assets/icons/redes-sociais/instagram.svg" width="32" height="32" alt="Instagram">
+            <img src="./src/assets/icons/redes-sociais/instagram.svg" width="32" height="32" alt="Instagram">
           </a>
           <a href="./">
-            <img src="../src/assets/icons/redes-sociais/facebook.svg" width="32" height="32" alt="Facebook">
+            <img src="./src/assets/icons/redes-sociais/facebook.svg" width="32" height="32" alt="Facebook">
           </a>
           <a href="./">
-            <img src="../src/assets/icons/redes-sociais/youtube.svg" width="32" height="32" alt="Youtube">
+            <img src="./src/assets/icons/redes-sociais/youtube.svg" width="32" height="32" alt="Youtube">
           </a>
         </div>
       </div>
@@ -162,10 +161,10 @@
         <h3 class="text-p-med">Informações</h3>
         <nav>
           <ul class="text-p-s">
-            <li><a href="../bicicletas.html">Bicicletas</a></li>
-            <li><a href="../seguros.html">Seguros</a></li>
-            <li><a href="../contato.html">Contato</a></li>
-            <li><a href="../termos.html">Termos e Condições</a></li>
+            <li><a href="./bicicletas.html">Bicicletas</a></li>
+            <li><a href="./seguros.html">Seguros</a></li>
+            <li><a href="./contato.html">Contato</a></li>
+            <li><a href="./termos.html">Termos e Condições</a></li>
           </ul>
         </nav>
       </div>
