--- a/seguros.html
+++ b/seguros.html
@@ -14,14 +14,13 @@
 <body>
   <div class="header-intro-bg">
     <header class="header">
-      <a href="../index.html">
-        <img src="../src/assets/img/bikcraft.svg" alt="Bikcraft" width="135">
-      </a>
+      <a href="./index.html">
+        <img src="./src/assets/img/bikcraft.svg" alt="Bikcraft" width="135"></a>
       <nav aria-label="primaria">
         <ul class="header-menu">
-          <li class="text-nav"><a href="../bicicletas.html">Bicicletas</a></li>
-          <li class="text-nav"><a href="../seguros.html">Seguros</a></li>
-          <li class="text-nav"><a href="../contato.html">Contato</a></li>
+          <li class="text-nav"><a href="./bicicletas.html">Bicicletas</a></li>
+          <li class="text-nav"><a href="./seguros.html">Seguros</a></li>
+          <li class="text-nav"><a href="./contato.html">Contato</a></li>
         </ul>
       </nav>
     </header>
@@ -170,7 +169,7 @@
 
   <footer class="footer">
     <div class="footer-container">
-      <img src="../src/assets/img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
+      <img src="./src/assets/img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       <div class="footer-contato">
         <h3 class="text-p-med">Contato</h3>
         <ul class="text-p-s">
@@ -182,13 +181,13 @@
 
         <div class="footer-redes">
           <a href="./">
-            <img src="../src/assets/icons/redes-sociais/instagram.svg" width="32" height="32" alt="Instagram">
+            <img src="./src/assets/icons/redes-sociais/instagram.svg" width="32" height="32" alt="Instagram">
           </a>
           <a href="./">
-            <img src="../src/assets/icons/redes-sociais/facebook.svg" width="32" height="32" alt="Facebook">
+            <img src="./src/assets/icons/redes-sociais/facebook.svg" width="32" height="32" alt="Facebook">
           </a>
           <a href="./">
-            <img src="../src/assets/icons/redes-sociais/youtube.svg" width="32" height="32" alt="Youtube">
+            <img src="./src/assets/icons/redes-sociais/youtube.svg" width="32" height="32" alt="Youtube">
           </a>
         </div>
       </div>
@@ -197,10 +196,10 @@
         <h3 class="text-p-med">Informações</h3>
         <nav>
           <ul class="text-p-s">
-            <li><a href="../bicicletas.html">Bicicletas</a></li>
-            <li><a href="../seguros.html">Seguros</a></li>
-            <li><a href="../contato.html">Contato</a></li>
-            <li><a href="../termos.html">Termos e Condições</a></li>
+            <li><a href="./bicicletas.html">Bicicletas</a></li>
+            <li><a href="./seguros.html">Seguros</a></li>
+            <li><a href="./contato.html">Contato</a></li>
+            <li><a href="./termos.html">Termos e Condições</a></li>
           </ul>
         </nav>
       </div>
