correcao de bugs e atualizacao de js para barra de navegacao

--- a/bicicletas.html
+++ b/bicicletas.html
@@ -166,6 +166,7 @@
       <p class="text-p-s copy">Bikcraft © Alguns direitos reservados.</p>
     </div>
   </footer>
+  <script src="./src/js/script.js"></script>
 </body>
 
 </html>
