--- a/orcamento.html
+++ b/orcamento.html
@@ -44,11 +44,11 @@
               <p class="text-p-s2">BIKCRAFT OU SEGURO?</p>
               <div>
                 <span>
-                  <input type="radio" id="bicicleta" name="opcaoDesejada" value="bikcraft">
+                  <input type="radio" id="bicicleta" name="tipo" value="bikcraft">
                   <label for="bikcraft" class="text-p-s1">Bikcraft</label>
                 </span>
                 <span>
-                  <input type="radio" id="seguro" name="opcaoDesejada" value="seguro">
+                  <input type="radio" id="seguro" name="tipo" value="seguro">
                   <label for="seguro" class="text-p-s1">Seguro</label>
                 </span>
               </div>
@@ -225,7 +225,8 @@
       <p class="text-p-s copy">Bikcraft © Alguns direitos reservados.</p>
     </div>
   </footer>
-
+  
+  <script src="./src/js/script.js"></script>
   <script src="./src/js/orcamento.js"></script>
 </body>
 
