--- a/seguros.html
+++ b/seguros.html
@@ -41,7 +41,7 @@
             <li class="text-p-s">Suporte 08h às 18h</li>
             <li class="text-p-s">Cobertura estadual</li>
           </ul>
-          <a href="" class="btn-secundario">Inscreva-se</a>
+          <a href="./orcamento.html" class="btn-secundario">Inscreva-se</a>
         </div>
 
         <div class="seguro-card">
@@ -57,7 +57,7 @@
             <li class="text-p-s">Desconto em parceiros</li>
             <li class="text-p-s">Acesso ao Clube Bikcraft</li>
           </ul>
-          <a href="" class="btn-primario">Inscreva-se</a>
+          <a href="./orcamento.html" class="btn-primario">Inscreva-se</a>
         </div>
       </div>
     </div>
@@ -207,7 +207,8 @@
       <p class="text-p-s copy">Bikcraft © Alguns direitos reservados.</p>
     </div>
   </footer>
-
+  
+  <script src="./src/js/script.js"></script>
   <script src="./src/js/faq.js"></script>
 </body>
 
