--- a/bicicletas/nebula.html
+++ b/bicicletas/nebula.html
@@ -176,6 +176,8 @@
       <p class="text-p-s copy">Bikcraft © Alguns direitos reservados.</p>
     </div>
   </footer>
+
+  <script src="../src/js/script.js"></script>
 </body>
 
 </html>
