--- a/bicicletas/nimbus.html
+++ b/bicicletas/nimbus.html
@@ -174,6 +174,8 @@
       <p class="text-p-s copy">Bikcraft © Alguns direitos reservados.</p>
     </div>
   </footer>
+
+  <script src="../src/js/script.js"></script>
 </body>
 
 </html>
