correcoes no javascript

--- a/seguros.html
+++ b/seguros.html
@@ -100,7 +100,9 @@
   <section class="faq">
     <div class="faq-container">
       <h1 class="text-h1">nossas vantagens<span class="text-h1-span">.</span></h1>
-      <div class="perguntas text-p-s">
+
+      <div class="faq-lista text-p-s">
+
         <div class="questao">
           <div class="pergunta">
             <p>Qual forma de pagamento vocês aceitam?</p>
@@ -163,9 +165,81 @@
             <p>A escolha da bicicleta perfeita vai depender do tipo de atividade que você irá realizar.</p>
           </div>
         </div>
+
       </div>
     </div>
   </section>
+
+  <!-- <section class="faq">
+    <div class="faq-container">
+      <h1 class="text-h1">nossas vantagens<span class="text-h1-span">.</span></h1>
+
+      <dl class="faq-lista text-p-s">
+        <div class="questao">
+          <div class="pergunta">
+            <p>Qual forma de pagamento vocês aceitam?</p>
+          </div>
+          <div class="resposta">
+            <p>Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+          </div>
+        </div>
+
+        <div class="questao">
+          <div class="pergunta">
+            <p>Como posso entrar em contato?</p>
+          </div>
+          <div class="resposta">
+            <p>Você pode entrar em contato com a Bikcraft através do nosso site, enviando um email para contato@bikcraft.com ou preenchendo o formulário de contato em nossa página. <br><br> Além disso, você também pode nos ligar pelo número (21) 99999-9999 de segunda a sexta-feira, das 9h às 18h.</p>
+          </div>
+        </div>
+
+        <div class="questao">
+          <div class="pergunta">
+            <p>Vocês possuem algum desconto?</p>
+          </div>
+          <div class="resposta">
+            <p>Para consulta de descontos, entre em contato com nosso time de vendas.</p>
+          </div>
+        </div>
+
+        <div class="questao">
+          <div class="pergunta">
+            <p>Qual a garantia que possuo?</p>
+          </div>
+          <div class="resposta">
+            <p>A garantia de seguro da Bikcraft cobre eventuais problemas com o produto adquirido dentro do período de validade da garantia acordado com o plano contratado.</p>
+          </div>
+        </div>
+
+        <div class="questao">
+          <div class="pergunta">
+            <p>Posso parcelar no boleto?</p>
+          </div>
+          <div class="resposta">
+            <p>Claro! Fazemos cobranças por boleto bancário, porém, é adcionado uma taxa de emissão. </p>
+          </div>
+        </div>
+
+        <div class="questao">
+          <div class="pergunta">
+            <p>Quantas trocas posso fazer ao ano?</p>
+          </div>
+          <div class="resposta">
+            <p>Vai depender do plano contratado. Para mais informações, acesse <a href="./seguros.html"> seguros.</a> </p>
+          </div>
+        </div>
+
+        <div class="questao">
+          <div class="pergunta">
+            <p>Qual Bikcraft devo escolher para o meu tamanho?</p>
+          </div>
+          <div class="resposta">
+            <p>A escolha da bicicleta perfeita vai depender do tipo de atividade que você irá realizar.</p>
+          </div>
+        </div>
+      </dl>
+    </div>
+  </section> -->
 
   <footer class="footer">
     <div class="footer-container">
@@ -207,9 +281,8 @@
       <p class="text-p-s copy">Bikcraft © Alguns direitos reservados.</p>
     </div>
   </footer>
-  
+
   <script src="./src/js/script.js"></script>
-  <script src="./src/js/faq.js"></script>
 </body>
 
 
